[gd_scene load_steps=10 format=3 uid="uid://dbme41d5jlqe6"]

[ext_resource type="Texture2D" uid="uid://b5l6bribadfq7" path="res://characters/player/Charge.png" id="1_v6jem"]
[ext_resource type="Script" uid="uid://ctjjwo2ylqpvy" path="res://characters/player/ball_of_fire.gd" id="2_a6i14"]

[sub_resource type="AtlasTexture" id="AtlasTexture_a6i14"]
atlas = ExtResource("1_v6jem")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yw3hr"]
atlas = ExtResource("1_v6jem")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_d6cq1"]
atlas = ExtResource("1_v6jem")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8bat0"]
atlas = ExtResource("1_v6jem")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8lkwx"]
atlas = ExtResource("1_v6jem")
region = Rect2(256, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_exb2m"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a6i14")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yw3hr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d6cq1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8bat0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8lkwx")
}],
"loop": false,
"name": &"ball_of_fire",
"speed": 15.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_a6i14"]

[node name="BallOfFire" type="AnimatedSprite2D"]
position = Vector2(-20, -2)
sprite_frames = SubResource("SpriteFrames_exb2m")
animation = &"ball_of_fire"
autoplay = "ball_of_fire"
frame = 4
frame_progress = 1.0
script = ExtResource("2_a6i14")

[node name="Hitbox" type="Area2D" parent="."]
position = Vector2(20, 2)
collision_layer = 2
collision_mask = 9

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource("CircleShape2D_a6i14")

[connection signal="animation_finished" from="." to="." method="_on_animation_finished"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_hitbox_body_entered"]
